--- a/ComputerService/wwwroot/app.css
+++ b/ComputerService/wwwroot/app.css
@@ -36,3 +36,11 @@ h1:focus {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
 }
+.tab{
+    border: 1px solid green;
+    width: 600px;
+}
+
+.tab-td{
+    border: 1px solid green;
+}
